change product name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Shopify-paginate",
+  "name": "Shopify-product-demo",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
